tests are running!
Next step it to start integration testing all the individual components